<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">

        <!--  Header Starts-->
        <RelativeLayout android:id="@+id/shop_pre_register_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dip"
            android:paddingBottom="20dip">
            <!-- Logo Start-->
            <ImageView android:src="@drawable/in_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <!-- Logo Ends -->
        </RelativeLayout>
        <!--  Header Ends -->

        <!-- Login Form -->
        <LinearLayout
            android:id="@+id/ishop_pre_register_main"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/shop_pre_register_header">



            <!-- Message for Sign up or sign in to the shop -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/shop_sign_in_message"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <!--  Mobile Phone Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:textColor="#372c24"
                android:text="@string/input_username"/>
            <EditText
                android:id="@+id/shop_pre_register_txt_sign_in_mobile_phone"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:background="@color/gray"
                android:gravity="right"
                android:hint="@string/mobile_phone_hint"
                android:inputType="phone" />

            <!--  Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/input_password"/>
            <EditText
                android:id="@+id/shop_pre_register_txt_password"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:password="true"
                android:background="@color/gray"
                android:gravity="right"/>

            <!-- Link to Password Recovery -->
            <TextView
                android:id="@+id/shop_pre_register_link_password_recovery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:text="@string/text_password_recovery"
                android:gravity="right"
                android:textSize="15sp"
                android:textColor="@color/blue"/>

            <!-- Login button -->
            <Button
                style="@style/Btn"
                android:id="@+id/shop_pre_register_btn_sign_in"
                android:layout_marginTop="20dip"
                android:text="@string/btn_sign_in_text"
                android:background="@color/greenSignIn"/>

            <!-- Link to Registration Screen -->
            <TextView
                android:id="@+id/shop_link_to_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/create_a_shop"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/blue"/>

        </LinearLayout>
        <!-- Login Form Ends -->



    </RelativeLayout>
</ScrollView>



