<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff"
        android:orientation="vertical">

        <!--  Header Starts
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dip"
            android:paddingBottom="20dip">
             Logo Start
            <ImageView android:src="@drawable/in_app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"/>
             Logo Ends
        </LinearLayout>-->
        <!--  Header Ends -->


        <!-- Login Form -->
        <LinearLayout
            android:id="@+id/addp_product_main"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip">


            <!--  Product Category -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/pic_select"
                android:layout_marginTop="40dip"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/ic_menu_camera"/>


            <!--  Product Name Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:textColor="#372c24"
                android:text="@string/product_name"/>
            <EditText
                style="@style/EditText"
                android:id="@+id/txt_product_name"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="10dip"
                android:singleLine="true"
                android:background="@color/gray"
                android:gravity="right"
                android:textColorHint="@color/hint"
                android:inputType="phone"
                android:textColor="@color/black" />


            <!--  Product Category -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/product_category"
                android:layout_marginTop="20dip"/>

            <Spinner
                android:id="@+id/select_product_category"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:prompt="@string/product_category"
                android:layout_marginTop="10dip"/>


            <!--  Product Price Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/price"
                android:layout_marginTop="20dip"/>
            <EditText
                style="@style/EditText"
                android:id="@+id/product_price"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:password="true"
                android:background="@color/gray"
                android:gravity="right"
                android:textColor="@color/black"/>





            <!-- Product Description -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:textColor="#372c24"
                android:text="@string/description"/>
            <EditText
                android:id="@+id/product_description"
                android:layout_width="fill_parent"
                android:layout_height="80dip"
                android:layout_marginTop="5dip"
                android:isScrollContainer="true"
                android:scrollbars="vertical"
                android:inputType="textLongMessage"
                android:background="@color/gray"
                android:gravity="right"
                android:textColor="@color/black"/>



        </LinearLayout>
        <!-- Login Form Ends -->

        <!-- Footer Starts -->
        <LinearLayout
            android:id="@+id/sumbit_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dip">


            <!-- Add product Button -->
            <Button
                style="@style/Btn"
                android:id="@+id/btn_add_product"
                android:text="@string/add_to_shop"
                android:background="@color/greenSignIn"/>

            <!-- Add product Button -->
            <Button
                style="@style/Btn"
                android:id="@+id/btn_abort_add_product"
                android:text="@string/add_to_shop"
                android:background="@color/meydoonRed"
                android:layout_marginTop="10dip"/>

        </LinearLayout>
        <!-- Footer Ends -->

    </LinearLayout>
</LinearLayout>



