<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="@color/white">

        <!--  Header Starts-->
        <RelativeLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/meydoonRed">



            <!--<TextView android:id="@+id/txt_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dip"
                android:paddingBottom="15dip"
                android:text="@string/txt_sign_up_header"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/white" />-->
        </RelativeLayout>
        <!--  Header Ends -->

        <!-- Setting Profile -->
        <RelativeLayout
            android:id="@+id/shop_set_profile_pic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="80dip">

            <!-- Set Profile Pic Start-->
            <ImageView
                android:src="@drawable/default_shop"
                android:id="@+id/shop_sing_up_profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <!-- Set Profile Pic Link -->
            <TextView
                android:id="@+id/shop_txt_set_pic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_set_shop_profile"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:layout_below="@+id/shop_sing_up_profile_pic"/>

        </RelativeLayout>


        <!-- Login Form -->
        <LinearLayout
            android:id="@+id/shop_register_main"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/shop_set_profile_pic">


            <!--  Name Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:textColor="#372c24"
                android:text="@string/shop_name"/>
            <EditText
                android:id="@+id/shop_txt_set_name"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="10dip"
                android:gravity="right"
                android:singleLine="true"
                android:background="@color/gray"
                android:textColor="@color/black"/>


            <!--  Password Label
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:textColor="#372c24"
                android:text="@string/input_password"/>
            <EditText
                android:id="@+id/shop_txt_set_password"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:password="true"
                android:background="@color/gray"
                android:gravity="right"
                android:textColor="@color/black"/>

                -->

            <!--  Category Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:textColor="#372c24"
                android:text="@string/shop_category"/>
            <Spinner
                android:id="@+id/shop_category_list"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:background="@color/gray"
                android:spinnerMode="dropdown"
                />

            <!--  City Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:textColor="#372c24"
                android:text="@string/city"/>
            <Spinner
                android:id="@+id/city_list"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:background="@color/gray"
                android:spinnerMode="dropdown"
                />


            <!-- Shop Address -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:textColor="#372c24"
                android:text="@string/address"/>
            <EditText
                android:id="@+id/shop_txt_address"
                android:layout_width="fill_parent"
                android:layout_height="80dip"
                android:layout_marginTop="5dip"
                android:isScrollContainer="true"
                android:scrollbars="vertical"
                android:inputType="textLongMessage"
                android:background="@color/gray"
                android:gravity="right"
                android:textColor="@color/black"/>


            <!-- Shop Description -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:textColor="#372c24"
                android:text="@string/description"/>
            <EditText
                android:id="@+id/shop_description"
                android:layout_width="fill_parent"
                android:layout_height="80dip"
                android:layout_marginTop="5dip"
                android:isScrollContainer="true"
                android:scrollbars="vertical"
                android:inputType="textLongMessage"
                android:background="@color/gray"
                android:gravity="right"
                android:textColor="@color/black"/>


        </LinearLayout>


        <!-- Register button -->
        <LinearLayout
            android:id="@+id/shop_register_buttons"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@+id/shop_register_main">

            <Button
                style="@style/Btn"
                android:id="@+id/shop_btn_sign_up"
                android:layout_marginTop="50dip"
                android:text="@string/submit_shop"
                android:background="@color/greenSignIn"/>

            <!-- Abort button -->
            <Button
                style="@style/Btn"
                android:id="@+id/shop_btn_abort_sign_up"
                android:layout_marginTop="10dip"
                android:text="@string/abort"
                android:background="@color/meydoonRed" />
        </LinearLayout>



        <!-- Login Form Ends -->


        <!-- Footer Starts
        <LinearLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"

            android:background="@color/gray">

            Text for Guest Enter
            <TextView android:id="@+id/txt_back_to_intro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dip"

                android:text="@string/txt_back"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/blue"
                />




        </LinearLayout>-->

        <!-- Footer Ends -->


    </RelativeLayout>
</ScrollView>