<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff"
        android:orientation="vertical">

        <!--  Header Starts-->
        <RelativeLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dip"
            android:layout_marginTop="215dip">
            <!-- Logo Start-->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="5dip"
                android:text="@string/isNormalUser"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#372c24"/>
            <!-- Logo Ends -->
        </RelativeLayout>
        <!--  Header Ends -->




        <!-- Normal user options -->
        <RelativeLayout
            android:id="@+id/guest_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_below="@+id/header"
            android:layout_alignParentBottom="true">


            <!-- Guest Enter Button -->
            <Button
                style="@style/Btn"
                android:id="@+id/btn_submit_shop"
                android:text="@string/submit_shop"
                android:background="@color/greenSignIn" />

        </RelativeLayout>


        <!-- Footer Starts -->
        <RelativeLayout
            android:id="@+id/guest_back_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"

            android:background="@color/gray">

            <!-- Text for Guest Enter -->
            <TextView android:id="@+id/txt_abort_add_normal_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dip"
                android:text="@string/txt_back"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/blue" />

        </RelativeLayout>

        <!-- Footer Ends -->

    </RelativeLayout>
</ScrollView>



